Org2/src/objects/APILog__c.object
<CustomObject>
    <fields>
        <fullName>ConsumerApplication__c</fullName>
        <label>Consumer Application</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeRequested__c</fullName>
        <label>Time requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>APILog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Request__c</columns>
        <columns>Response__c</columns>
        <columns>TimeRequested__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>api-{000000}</displayFormat>
        <label>APILog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APILogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>